# MetaPB

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  formatAll.sh  formatSrcInDir.sh
benchmarks/: CMakeLists.txt  benchmarks.cpp  defs.hpp  enviroment.hpp  environment.hpp  fft.hpp  gea.hpp  graphLoader.hpp  graphTester.cpp  helper.hpp  ideaValidation.cpp
benchmarks/Communication/src_cpu/: CMakeLists.txt  commuBench.cpp
benchmarks/Communication/src_dpu/: CMakeLists.txt
benchmarks/Hybrid/: CMakeLists.txt
benchmarks/Hybrid/VAM/: CMakeLists.txt  Makefile
benchmarks/Hybrid/VAM/baselines/cpu/: app_baseline.c
benchmarks/Hybrid/VAM/src_cpu/: CMakeLists.txt  vaHost.cpp
benchmarks/Hybrid/VAM/src_dpu/: CMakeLists.txt  dpuVA.c  dpuVM.c
benchmarks/Hybrid/VAM/support/: common.h  params.h
benchmarks/benchBase/src_cpu/: CMakeLists.txt  main.cpp
benchmarks/benchBase/src_dpu/: CMakeLists.txt
benchmarks/experiments/: b_DetailShowoff.hpp  b_HybridOP.hpp  b_graphBench.hpp  b_singleOPDeduce.hpp  benchmark.hpp  benchmarkManager.hpp  dummy_template.hpp  e_reallocDPU.hpp
benchmarks/helpers/: defs.hpp  environment.hpp  graphLoader.hpp  helper.hpp
benchmarks/realLoadScheduling/: fft.hpp  gea.hpp
benchmarks/workloads/: random_workloads.hpp  real_workloads.hpp  single_op_experiment.hpp  string_workload.hpp  workloads.hpp
dataInput/output/: test.py
dataOutput/quant/: perfEnergyVisualizer.py
include/: DPU_GLOBAL.hpp
include/DPUInterface/: DPUInterface.hpp  RuntimeDPUCompileProxy.hpp
include/Executor/: .HeteroComputePool.hpp.swp  HeteroComputePool.hpp  MemoryPlanner.hpp  Task.hpp  TaskGraph.hpp  Transfer.hpp  graphTraits.hpp  homoDAGExec.hpp
include/MetaScheduler/: MetaScheduler.hpp
include/Operator/: .OperatorBase.hpp.swp  .OperatorCONV_1D.hpp.swp  .OperatorLOOKUP.hpp.swp  .OperatorRegistry.hpp.swp  OperatorAFFINE.hpp  OperatorBase.hpp  OperatorCONV_1D.hpp  OperatorDOT_ADD.hpp  OperatorDOT_PROD.hpp  OperatorELEW_ADD.hpp  OperatorELEW_PROD.hpp  OperatorEUDIST.hpp  OperatorFILTER.hpp  OperatorLOGIC_END.hpp  OperatorLOGIC_START.hpp  OperatorLOOKUP.hpp  OperatorMAC.hpp  OperatorMAP.hpp  OperatorManager.hpp  OperatorREDUCE.hpp  OperatorRegistry.hpp  OperatorUNDEFINED.hpp  OperatorVA.hpp
include/Operator/dpu/: AFFINE.h  CONV_1D.h  FILTER.h  LOOKUP.h  MAC.h  common.h
include/Operators/: Datablock.hpp  OperatorBase.hpp  OperatorManager.hpp
include/Optimizer/: OptimizerAOA.hpp  OptimizerBase.cpp  OptimizerBase.hpp  OptimizerManager.hpp  OptimizerNaive.cpp  OptimizerNaive.hpp  OptimizerPSO.hpp  OptimizerRSA.hpp
include/Optimizer/implements/: OptimizerAOA.cpp  OptimizerBase.cpp  OptimizerNaive.cpp  OptimizerPSO.cpp  OptimizerRSA.cpp
include/Scheduler/: .GreedyScheduler.hpp.swp  CPUOnlyScheduler.hpp  DPUOnlyScheduler.hpp  GreedyScheduler.hpp  HEFTScheduler.hpp  MetaScheduler.hpp  SchedulerBase.hpp  SchedulerManager.hpp
include/StrategyGen/: StrategyGenerator.hpp
include/Task/: Task.hpp
include/utils/: CSVWriter.hpp  ChronoTrigger.hpp  Consensus.h  DPUCompileProxy.hpp  DPUHelper.hpp  DPUInterface.hpp  GraphOPRandomizer.hpp  GraphVisualizer.hpp  Learner.hpp  MetricsGather.hpp  Quant.hpp  QuantDumper.hpp  Quantilizer.hpp  ReportUtils.hpp  Stats.hpp  dpuCompile.hpp  lockfree_ring_buffer.h  paramDef.hpp  regressor.hpp  tasks.hpp  typeParse.hpp  typedef.hpp
src/: CMakeLists.txt
src/Executor/: .HeteroComputePool.cpp.swp  CMakeLists.txt  HeteroComputePool.cpp  Task.cpp  TaskGraph.cpp  heteroDAGExec.cpp  homoDAGExec.cpp  sema.cpp
src/MetaScheduler/: CMakeLists.txt  MetaScheduler.cpp  test.cpp
src/Operator/: .OperatorBase.cpp.swp  CMakeLists.txt  OperatorAffine.cpp  OperatorBase.cpp  OperatorCONV_1D.cpp  OperatorDOT_ADD.cpp  OperatorDOT_PROD.cpp  OperatorELEW_ADD.cpp  OperatorELEW_PROD.cpp  OperatorEUDIST.cpp  OperatorFILTER.cpp  OperatorLOGIC_END.cpp  OperatorLOGIC_START.cpp  OperatorLOOKUP.cpp  OperatorMAC.cpp  OperatorMAP.cpp  OperatorManager.cpp  OperatorREDUCE.cpp
src/Operator/dpu/: AFFINE.c  CMakeLists.txt  CONV_1D.c  DOT_ADD.c  DOT_PROD.c  ELEW_ADD.c  ELEW_PROD.c  EUDIST.c  FILTER.c  LOOKUP.c  MAC.c  dummy.c  reset.c
src/Operators/: .CMakeLists.txt.swp  OperatorBase.cpp
src/Scheduler/: .MetaScheduler.cpp.swp  CMakeLists.txt  HEFTScheduler.cpp  MetaScheduler.cpp
src/StrategyGen/: StrategyGenerator.cpp
src/Task/: CMakeLists.txt
src/utils/: CMakeLists.txt  ChronoTrigger.cpp  DPUCompileProxy.cpp  DPUHelper.cpp  MetricsGather.cpp  Quantilizer.cpp  dpuCompile.cpp  tasks.cpp
tests/: .operatorTest.cpp.swp  CMakeLists.txt  ExecutorTest.cpp  HCPTest.cpp  asyncTest.cpp  lab.cpp  metaSchedulerTest.cpp  operatorTest.cpp  optimizerTest.cpp  regressionTest.cpp  schedulerTest.cpp  taskGraphTest.cpp  utilTest.cpp
visualize/: Energy_Strategy_Mat.csv  Makefile  Time_Strategy_Mat.csv  allBenchVisualize.py  convergePlot.py  gantt_visulizer.py  graphMaker.py  hybridOPVisualize.py  lab.ipynb  poolTimingVisualizer.py  poolVisualize.py  quantVisualizer.py  regressionVisualizer.py  scatterPlot.py  scheduleVisualize.py  timings.csv
