add_subdirectory(Communication)
add_subdirectory(Hybrid)
#add_subdirectory(benchBase)

# Quantify all operators from operator library and doing regression
#add_subdirectory(opQuantAndRegression)

# Measure the performance gain in mixing operator
#add_subdirectory(mixOpExec)

# Benchmark scheduling techniques in a easy-readable load
#add_subdirectory(vamScheduling)

# Benchmark simulated arbitrary load in HEFT baseline DAG
#add_subdirectory(rngLoadScheduling)

# Benchmark real world loads.
#add_subdirectory(realLoadScheduling)
