#add_executable(operatorTest ./operatorTest.cpp)
#add_executable(taskTest ./taskTest.cpp)
#add_executable(schedulerTest ./schedulerTest.cpp)
#add_executable(metaSchedulerTest ./metaSchedulerTest.cpp)
add_executable(opt ./optimizerTest.cpp)
add_executable(utl ./utilTest.cpp)
add_executable(async ./asyncTest.cpp)
#target_link_libraries(operatorTest operatorLib)
#target_link_libraries(taskTest taskLib)
#target_link_libraries(schedulerTest schedulerLib)
#target_link_libraries(metaSchedulerTest metaSchedulerLib)
target_link_libraries(utl utilsLib)
target_link_libraries(async PRIVATE STDEXEC::stdexec stdexec_executable_flags)
target_compile_options(utl PRIVATE -DCT)
