set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/test)
add_executable(opt ./optimizerTest.cpp)
add_executable(utl ./utilTest.cpp)
add_executable(async ./asyncTest.cpp)
add_executable(regression ./regressionTest.cpp)
add_executable(lab ./lab.cpp)
add_executable(opTest ./operatorTest.cpp)
target_link_libraries(opTest operatorLib)
target_link_libraries(lab xgboost::xgboost)
target_link_libraries(utl utilsLib)
target_link_libraries(async PRIVATE STDEXEC::stdexec stdexec_executable_flags)
target_compile_options(utl PRIVATE -DCT)
target_link_libraries(regression xgboost::xgboost)
