set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/test)
add_executable(opt ./optimizerTest.cpp)
add_executable(utl ./utilTest.cpp)
add_executable(regression ./regressionTest.cpp)
add_executable(lab ./lab.cpp)
target_link_libraries(lab xgboost::xgboost)
target_link_libraries(utl utilsLib)
#add_executable(async ./asyncTest.cpp)
#target_link_libraries(async PRIVATE STDEXEC::stdexec stdexec_executable_flags)
target_compile_options(utl PRIVATE -DCT)
target_link_libraries(regression xgboost::xgboost)
add_executable(opTest ./operatorTest.cpp)
target_link_libraries(opTest operatorLib utilsLib xgboost::xgboost)
#target_compile_options(opTest PRIVATE -O3 -mavx512f)

add_executable(execTest ./ExecutorTest.cpp)
target_link_libraries(execTest executorLib)

add_executable(tgTest ./taskGraphTest.cpp)
target_link_libraries(tgTest executorLib)

add_executable(hcpTest ./HCPTest.cpp)
target_link_libraries(hcpTest executorLib)

add_executable(schedTest ./schedulerTest.cpp)
target_link_libraries(schedTest executorLib schedulerLib utilsLib)
