set(EXECUTABLE_OUTPUT_PATH ${DPU_EXECUTABLE_OUTPUT_PATH})
add_executable(CONV_1D ./CONV_1D.c)
add_executable(ELEW_ADD ./ELEW_ADD.c)
add_executable(ELEW_PROD ./ELEW_PROD.c)
add_executable(EUDIST ./EUDIST.c)
add_executable(LOOKUP ./LOOKUP.c)
add_executable(MAC ./MAC.c)
add_executable(MAP ./dummy.c)
add_executable(REDUCE ./dummy.c)
add_executable(LOGIC_END ./dummy.c)
add_executable(LOGIC_START ./reset.c)
