set(EXECUTABLE_OUTPUT_PATH ${DPU_EXECUTABLE_OUTPUT_PATH})
add_executable(dpuVA ./dpuVA.c)
add_executable(dpuVM ./dpuVM.c)
target_compile_options(dpuVA PRIVATE -Wall -Wextra -g -I../support -O2 -DNR_TASKLETS=12 -DBL=10 -DUINT32)
target_link_options(dpuVA PRIVATE -Wall -Wextra -g -I../support -O2 -DNR_TASKLETS=12 -DBL=10 -DUINT32)
target_compile_options(dpuVM PRIVATE -Wall -Wextra -g -I../support -O2 -DNR_TASKLETS=12 -DBL=10 -DUINT32)
target_link_options(dpuVM PRIVATE -Wall -Wextra -g -I../support -O2 -DNR_TASKLETS=12 -DBL=10 -DUINT32)
